# testing

./: .gitignore  README.md  makefile  poetry.mk  pyproject.toml
testing/: sort_1.py  sort_2.py
tests/: test_sorter.py
